started banner block with positioning

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -24,7 +24,8 @@ $grid-breakpoints: (
     md: 767.5px,
     lg: 991.5px,
     xl: 1199.5px,
-    xxl: 1439.5px
+    xxl: 1439.5px,
+    xxxl: 1679.5px
 );
 
 $container-max-widths: (
@@ -34,7 +35,8 @@ $container-max-widths: (
     md: 767.5px,
     lg: 991.5px,
     xl: 1199.5px,
-    xxl: 1404px
+    xxl: 1404px,
+    xxxl: 1640px
 );
 
 // Misc
