added card sets for general use

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -13,8 +13,10 @@ $quaternary: #C1CD90;
 $body-color: #6A6A6A;
 $headings-color: #373A3F;
 $input-focus-border-color: $primary;
+$grey: #8B8B8B;
 
 $selection-color: #d9edf7;
+
 
 // Breakpoints
 $grid-breakpoints: (
