--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -37,3 +37,64 @@ body {
         }
     }
 }
+
+.card {
+    border: 0px;
+    box-shadow: 0px 5px 40px 0px rgba(0,0,0,0.16);
+    border-radius: 10px;
+    color: $headings-color;
+    margin-bottom: $spacer*1.5;
+
+    .btn {
+        min-width: 223px;
+    }
+}
+
+.card-body {
+    padding: $spacer*1.25;
+}
+
+.card-title {
+    @extend h3;
+    color: inherit;
+    margin-bottom: $spacer/2.5;
+}
+.card-text {
+    font-size: 0.818181818rem;
+    line-height: 1.444444444;
+    margin-bottom: $spacer;
+    color: $grey;
+}
+
+.card-set--blue {
+    .card {
+        background-color: $primary;
+        color: white;
+    }
+    .card-text {
+        color: inherit;
+    }
+}
+
+.card-set--blog {
+    .card {
+        background-color: rgba($headings-color, .1);
+        box-shadow: none;
+    }
+}
+
+.card-set--img-bg {
+    .card {
+        background-color: $headings-color;
+        box-shadow: none;
+        color: white;
+    }
+    .card-title,
+    .card-text {
+        max-width: 552px;
+    }
+
+    .card-text {
+        color: inherit;
+    }
+}
