--- a/src/themes/northwestwellnesscentre/includes/gutenburg/block-styles.css
+++ b/src/themes/northwestwellnesscentre/includes/gutenburg/block-styles.css
@@ -1,9 +1,9 @@
 /* Admin */
 
-.wp-testimonial-carousel {
+.sproing-block-wrapper {
     min-height: 100px;
 }
 
-.wp-testimonial-carousel .components-placeholder__label {
+.sproing-block-wrapper .components-placeholder__label {
     margin-bottom: 0;
 }
