--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -14,6 +14,8 @@ $body-color: #6A6A6A;
 $headings-color: #373A3F;
 $input-focus-border-color: $primary;
 $grey: #8B8B8B;
+$soft: rgba($headings-color, .1);
+$general: #C2CBD4;
 
 $selection-color: #d9edf7;
 
