--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -17,6 +17,8 @@ $grey: #8B8B8B;
 $soft: rgba($headings-color, .1);
 $general: #C2CBD4;
 
+$navbar-dark-active-color: $body-color;
+
 $selection-color: #d9edf7;
 
 
