--- a/src/style/components/_owl.theme.nwwc.scss
+++ b/src/style/components/_owl.theme.nwwc.scss
@@ -17,6 +17,7 @@
         outline: none;
         background-color: transparent;
         border: none;
+        z-index: 9999;
 
         @include media-breakpoint-down(sm) {
             display: none;
@@ -46,7 +47,7 @@
         margin-top: $spacer;
         margin-bottom: -$spacer*2;
 
-        @include media-breakpoint-up(sm) {
+        @include media-breakpoint-up(md) {
             display: none;
         }
     }
@@ -65,6 +66,7 @@
         transition: opacity .2s ease;
         outline: none;
     }
+
     .owl-dots .owl-dot.active span {
         background: $primary;
     }
@@ -75,21 +77,19 @@
     .owl-nav-outside {
         button.owl-next,
         button.owl-prev {
-            background-size : 24px;
+            background-size: 24px;
             background-repeat: no-repeat;
             background-position-x: 50%;
         }
     }
 }
 
-.owl-carousel  {
-    display: flex !important;
-    height: 100%;
-}
-.owl-carousel .owl-item > .item  {
+
+.owl-carousel .owl-item > .item {
     display: flex;
     height: 100%;
 }
+
 .owl-carousel .owl-item > .item > .card {
     display: flex;
     width: 100%;
@@ -100,7 +100,16 @@
 .owl-stage {
     display: flex;
 }
+
 .owl-item {
     display: flex;
     flex: 1 0 auto;
+}
+
+
+@include media-breakpoint-up(md) {
+    .owl-carousel {
+        display: flex !important;
+        height: 100%;
+    }
 }
