--- a/src/themes/northwestwellnesscentre/style-editor.css
+++ b/src/themes/northwestwellnesscentre/style-editor.css
@@ -25,7 +25,7 @@ body {
     text-transform: uppercase;
     font-size: 20px;
     line-height: 1.2;
-    background-color: #1C2F44;
+    background-color: red;
     padding: 21.5px 40px;
 }
 .is-style-outline .wp-block-button__link {
