slider tweaks for auto-height

--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -243,6 +243,10 @@ article {
 
 .spa__experience--header {
 
+    @include media-breakpoint-down(sm) {
+        font-size: 2rem;
+    }
+
     @include media-breakpoint-up(lg) {
         max-width: 270px;
     }
