--- a/src/style/components/_owl.theme.nwwc.scss
+++ b/src/style/components/_owl.theme.nwwc.scss
@@ -88,28 +88,28 @@
     }
 }
 
+@include media-breakpoint-up(md) {
+    .owl-carousel .owl-item > .item {
+        display: flex;
+        height: 100%;
+    }
 
-.owl-carousel .owl-item > .item {
-    display: flex;
-    height: 100%;
+    .owl-carousel .owl-item > .item > .card {
+        display: flex;
+        width: 100%;
+        object-fit: cover;
+        max-width: initial;
+    }
+
+    .owl-stage {
+        display: flex;
+    }
+
+    .owl-item {
+        display: flex;
+        flex: 1 0 auto;
+    }
 }
-
-.owl-carousel .owl-item > .item > .card {
-    display: flex;
-    width: 100%;
-    object-fit: cover;
-    max-width: initial;
-}
-
-.owl-stage {
-    display: flex;
-}
-
-.owl-item {
-    display: flex;
-    flex: 1 0 auto;
-}
-
 
 @include media-breakpoint-up(md) {
     .owl-carousel {
