button hover state updates

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -11,7 +11,7 @@ $tertiary: #A8C4C5;
 $quaternary: #C1CD90;
 $sand: #F4F3EF;
 
-$active: #373A3F;
+$active: white;
 
 $body-color: #6A6A6A;
 $headings-color: #373A3F;
