--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -21,7 +21,6 @@ $soft: rgba($headings-color, .1);
 $general: #C2CBD4;
 
 $navbar-dark-active-color: $active;
-
 $selection-color: #d9edf7;
 
 
@@ -50,7 +49,7 @@ $container-max-widths: (
 
 // Misc
 
-$spacer: 1.363636364rem; //30px
+$spacer: 1.666666667rem; //30px
 
 $spacers: () !default;
 $spacers: map-merge((
@@ -88,3 +87,5 @@ $headings-font-family: $font-family-serif;
 // Figure
 $figure-margin: $spacer * 2.5;
 $matrix-block-margin: $figure-margin;
+
+$top-set-space: $spacer*2.5;
