--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -21,13 +21,14 @@ body {
 .banner__block {
     position: relative;
     overflow: hidden;
+    margin-top: -($top-set-space);
 }
 
 .banner__color-overlay {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(#000, .60);
+    background-color: rgba(#373A3F, .45);
     top: 0;
     left: 0;
     right: 0;
@@ -70,32 +71,55 @@ body {
     }
 }
 
+a.card__link {
+    text-decoration: none;
+}
+a.card__link > .item > .card,
+a.card__link > .card {
+    position: relative;
+    top: 0;
+    transition: all ease 0.5s;
+}
+
+a.card__link:hover {
+    & > .card,
+    & > .item > .card {
+        top: -10px;
+        box-shadow: 0 1rem 1rem rgba(0, 0, 0, .2);
+    }
+}
+
+
 .card {
     border: 0px;
     box-shadow: 0px 5px 16px 0px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
     color: $headings-color;
     margin-bottom: $spacer*1.5;
+    font-weight: 300;
 
     .btn {
         min-width: 223px;
     }
 
     .card-body {
-        padding: $spacer*1.25;
+        padding: $spacer;
         display: flex;
         flex-direction: column;
+
+        @include media-breakpoint-up(sm) {
+            padding: $spacer*1.666666667;
+        }
+
     }
 
     .card-title {
-        @extend h3;
+        @extend h2;
         color: inherit;
         margin-bottom: $spacer/2.5;
     }
 
     p {
-        font-size: 0.818181818rem;
-        line-height: 1.444444444;
         margin-bottom: $spacer;
         color: $grey;
     }
@@ -103,7 +127,7 @@ body {
 
 .card-set--blue {
     .card {
-        background-color: $primary;
+        background-color: #829EAF;
         color: white;
     }
 
