--- a/src/style/layouts/_footer.scss
+++ b/src/style/layouts/_footer.scss
@@ -13,7 +13,7 @@ footer {
 .footer-nav {
     .menu-item {
         .nav-link {
-            color: #373A3F;
+            color: rgba(#373A3F,.65);
             font-size: 0.954545455rem;
             padding: 12px 1.227272727rem 6px;
         }
