--- a/src/style/layouts/_header.scss
+++ b/src/style/layouts/_header.scss
@@ -78,7 +78,8 @@
         content: "\f078";
         width: auto;
         height: 15px;
-        margin-top: 1px;
+        margin-top: 3px;
+        margin-left: 8px;
     }
 
     @include media-breakpoint-up(md) {
@@ -133,12 +134,11 @@
         }
 
         .dropdown > .dropdown-toggle:active {
-            /*Without this, clicking will make it sticky*/
             pointer-events: none;
         }
 
         .dropdown-menu {
-            box-shadow: 0px 4px 16px -9px rgba(0, 0, 0, 0.35);
+            box-shadow: 0px 4px 20px -4px rgba(0, 0, 0, 0.35);
             border-radius: 0;
             border: none;
             right: auto;
